--- a/css/style.scss
+++ b/css/style.scss
@@ -510,13 +510,24 @@ span.date {
 	}
 }
 
+
+
+// 
+.detail_info_wrap_white {
+	@include display_varible($justify-content: flex-start);
+	.list_detail_info {
+		color: #Ffffff;
+	}
+}
+
+
 .badge {
 	position: absolute;
-	top: 0; left: 0;
+	top: 6px; left: 6px;
 	background-color: $maincolor;
-	border-top-left-radius: 5px;
-	border-bottom-right-radius: 5px;
-	padding: 5px 8px;
+	border-radius: 30px;
+	width: 30px; height: 30px;
+	@include display_varible;
 
 	span {
 		font-size: 10px;
@@ -543,10 +554,6 @@ span.date {
 	}
 	
 }
-
-
-
-
 
 
 
@@ -579,12 +586,22 @@ span.date {
 				border-bottom: 1px solid $color_01;
 				overflow: hidden;
 
-				img {
+				> img {
 					max-width: 100%;
 					max-height: 100%;
 					position: absolute;
 					top: 50%; left: 50%;
 					transform: translate(-50%, -50%);
+				}
+
+				.caption {
+					position: absolute;
+					left: 0;
+					bottom: 0;
+					height: 30px;
+					width: 100%;
+					background-color: rgba(0, 0, 0, 0.3);
+					@include display_varible($justify-content: flex-start);
 				}
 			}
 
@@ -716,25 +733,27 @@ span.date {
 .storelist_content {
 
 	> div {
-		padding: 30px 0 20px 0;
-		background-color: #ffffff;
 
 		h3 {
 			font-size: 16px;
 			font-weight: bold;
-			padding: 0 12px 15px 12px;
+			padding: 15px 12px;
 		}
 	}
 
 	> div:first-child {
-		padding: 60px 0 20px 0;
+		padding: 30px 0 20px 0;
 		margin-bottom: 10px;
+		background-color: #ffffff;
 	}
 
 	.storelist_all_list {
-		
-		.storelist {
-
+		h3 {
+			background-color: #ffffff;
+		}
+		.list_align_wrap {
+			background-color: #ffffff;
+			padding-bottom: 10px;
 		}
 		
 	}
@@ -743,8 +762,6 @@ span.date {
 .list_align_wrap {
 	position: relative;
 	width: 100%;
-	margin-bottom: 15px;
-
 	p {
 		font-size: 12px;
 		color: $color_05;
@@ -752,8 +769,8 @@ span.date {
 
 	span {
 		position: absolute;
-		top: 50%; right: 0;
-		transform: translate(-50%, -50%);
+		top: 50%; right: 14px;
+		transform: translateY(-50%);
 		font-size: 12px;
 		color: $color_05;
 	}
@@ -764,25 +781,25 @@ span.date {
 
 .storelist_box {
 	position: relative;
-	padding: 14px;
+	padding: 10px 14px;
 	box-sizing: border-box;
-	border:  1px solid $color_01;
-	border-radius: 5px;
-	margin-bottom: 10px;
+	background-color: #ffffff;
+	border-top:  1px solid $color_01;
+	border-bottom:  1px solid $color_01;
+	margin-bottom: 5px;
 	@include display_varible($justify-content: flex-start, $align-items: flex-start);
 
 	.img {
 		position: absolute;
 		top: 50%; left: 14px;
 		transform: translateY(-50%);
-		width: 123px;
-		height: 123px;
+		width: 125px;
+		height: 125px;
 		overflow: hidden;
 		border-radius: 5px;
 		@include display_varible;
 
 		img {
-			max-width: 100%;
 			max-height: 100%;
 		}
 	}
@@ -792,12 +809,12 @@ span.date {
 		height: 123px;
 		margin-left: 132px;
 		.store_name {
-			font-size: 14px;
-			font-weight: bold;
+			font-size: 16px;
+			font-weight: 700;
 			margin-bottom: 10px;
 		}
 		.store_desc {
-			font-size: 13px;
+			font-size: 14px;
 			color: $color_06;
 			margin-bottom: 5px;
 		}
@@ -805,6 +822,14 @@ span.date {
 		.store_address {
 			font-size: 10px;
 			color: $color_03;
+
+			span {
+				img {
+					margin-right: 3px;
+				}
+				margin-left: 6px;
+				@include display_varible($display: inline-flex);
+			}
 		}
 
 		.tag_list {
@@ -821,7 +846,7 @@ span.date {
 	height: 22px;
 	line-height: 22px;
 	background-color: #E0F8FF;
-	border-radius: 22px;
+	border-radius: 5px;
 	font-size: 10px;
 	color: #006F92;
 }
@@ -1068,7 +1093,7 @@ span.date {
 						border-radius: 5px;
 						@include display_varible;
 						overflow: hidden;
-						background-color: #cccccc;
+						background-color: $color_01;
 						img {
 							max-height: 100%;
 						}
@@ -1156,43 +1181,60 @@ p.original_price {
 	}
 }
 
-
+.list_badge {
+	@include display_varible($display: inline-flex);
+	padding: 0px 5px;
+	height: 16px;
+	font-size: 10px;
+	color: #ffffff;
+	border-radius: 5px;
+	background-color: $maincolor;
+}
 
 
 
 .channel_list_content {
 
 	> div {
-		padding: 30px 0 20px 0;
-		background-color: #ffffff;
-
 		h3 {
 			font-size: 16px;
 			font-weight: bold;
-			padding: 0 12px 15px 12px;
+			padding: 12px 15px;
 		}
 	}
 
 	> div:first-child {
-		padding: 60px 0 20px 0;
+		padding: 30px 0 20px 0;
 		margin-bottom: 10px;
+		background-color: #ffffff;
+	}
+
+	> div:last-child {
+		h3 {
+			background-color: #ffffff;
+		}
+		.list_align_wrap {
+			background-color: #ffffff;
+			padding-bottom: 10px;
+		}
 	}
 	
 }
 
 .channel_list_box{
 	position: relative;
-	padding: 14px;
+	padding: 10px 14px;
+	background-color: #ffffff;
 	box-sizing: border-box;
-	border:  1px solid $color_01;
-	border-radius: 5px;
-	margin-bottom: 10px;
+	border-top: 1px solid $color_01;
+	border-bottom: 1px solid $color_01;
+	margin-bottom: 5px;
 	@include display_varible($justify-content: flex-start, $align-items: flex-start);
 
 	.img {
 		position: absolute;
-		width: 123px;
-		height: 123px;
+		width: 132px;
+		height: 132px;
 		top: 50%; left: 14px;
 		transform: translateY(-50%);
 		overflow: hidden;
@@ -1201,84 +1243,83 @@ p.original_price {
 		background-color: #e3e3e3;
 
 		> img {
-			max-width: 100%;
 			max-height: 100%;
 		}
+		.subscription {
+			position: absolute;
+			height: 14px;
+			padding: 0px 5px;
+			border-radius: 3px;
+			top: 6px; right: 6px;
+			background-color: rgba(0,0,0,0.5);
+			font-size: 10px;
+			color: #ffffff;
+			@include display_varible;
+			img {
+				margin-right: 2px;
+			}
+		}
+
 	}
 
 	> .desc {
 		width: 100%;
-		height: 123px;
-		margin-left: 132px;
-
+		height: 132px;
+		margin-left: 142px;
+		.list_badge {
+			margin-bottom: 14px;
+		}
 		.channel_name {
-			font-size: 14px;
+			font-size: 16px;
 			font-weight: 700;
 			margin-bottom: 5px;
 		}
 
 		.channel_desc {
-			font-size: 12px;
+			font-size: 14px;
 			color: $color_05;
 			margin-bottom: 10px;
 		}
 
-
 		.channel_detail {
-			position: relative;
-			width: 100%;
-			height: 56px;
-			padding: 6px 8px;
-			background-color: $bgcolor;
-			border-radius: 5px;
-			box-sizing: border-box;
+			@include display_varible($justify-content: flex-start);
 
-			@include display_varible($align-items:flex-start, $justify-content: flex-start);
-
-
-			> .img {
-				position: absolute;
-				top: 50%; left: 8px;
-				transform: translateY(-50%);
-				@include circle_img ($width: 44px,$height: 44px, $border-radius: 3px);
-				overflow: hidden;
-				@include display_varible;
-	
-
-				> img {
-					max-width: 100%;
-					max-height: 100%;
-				}
-			}
-			
-
-			.cnt {
-				width: 100%;
-				height: 100%;
-				margin-top: 3px;
-				margin-left: 54px;
-				> p {
-					color: $color_05;
-					font-size: 12px;
-					font-weight: bold;
-					margin-bottom: 3px;
-				}
-				.info > div {
-					display: inline-flex;
-					align-items: center;
-
-					span {
-						font-size: 10px;
-						line-height: initial;
-						color: $color_03;
-					}
-				}
+			.detail_info {
+				
 			}
 		}
+
+		
+
 	}
 }
 
 
+
+.list_detail_info {
+	@include display_varible($justify-content: flex-start);
+	font-size: 10px;
+	color: #cccccc;
+	margin-right: 5px;
+
+	img {
+		margin-right: 2px;
+	}
+}
+
+
+/* 유저 이미지 */
+.user_img {
+	position: absolute;
+	top: 6px; left: 6px;
+	width: 30px; height: 30px;
+	border-radius: 30px;
+	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+	overflow: hidden;
+	img {
+		max-height: 100%;
+	}
+}
 
 
 
@@ -1407,6 +1448,62 @@ p.original_price {
 
 	}
 }
+
+
+
+/* 스토리 리스트 css */
+.story_list_wrap {
+	> div {
+		background-color: #ffffff;
+		h3 {
+			font-size: 16px;
+			font-weight: bold;
+			padding: 15px 12px;
+		}
+
+
+		&:first-child {
+			padding: 30px 0 20px 0;
+			margin-bottom: 10px;
+		}
+	}
+	.story_list_box_wrap {
+		padding-top: 20px;
+	}
+}
+
+.story_list_box_wrap {
+	@include display_varible($justify-content: space-between);
+	flex-wrap: wrap;
+	> div {
+		&:nth-child(2n) {
+			margin-left: 1%;
+		}
+	}
+}
+
+.story_list_box {
+	width: 49%;
+	margin-bottom: 15px;
+	.image_box {
+		width: 100%;
+		height: 210px;
+		flex-direction: column;
+		.story_cnt_text {
+			position: absolute;
+			left: 11px;
+			bottom: 11px;
+		}
+
+	}
+
+	.img {
+		border-radius: 28px;
+	}
+}
+
+
+
 
 
 
@@ -4197,6 +4294,129 @@ p.original_price {
 			}
 		}
 	}
+}
+
+
+
+.intergrate_search_nav {
+	background-color: #ffffff;
+	height: 55px;
+	padding-left: 40px;
+	box-sizing: border-box;
+	@include display_varible;
+	border-bottom: 1px solid #eeeeee;
+
+	.back_btn {
+		@include position_var($left: 14px);
+	}
+
+	.intergate_search_wrap {
+		position: relative;
+		width: 100%;
+		height: 36px;
+		border-radius: 36px;
+		border: 1px solid #FF566A;
+		padding-right: 40px;
+		box-sizing: border-box;
+		overflow: hidden;
+
+		.input {
+			position: relative;
+			box-sizing: border-box;
+			padding-right: 20px;
+
+			input {
+				width: 100%;
+				border: none;
+			}
+
+			.text_remove {
+				@include position_var($left: auto);
+				right: 0;
+				width: 16px;
+				height: 16px;
+				background-color: $color_02;
+				border-radius: 16px;
+				color: #ffffff;
+				font-size: 10px;
+				font-weight: 400;
+				cursor: pointer;
+			}	
+		}
+
+
+
+		.search_btn {
+			@include position_var($left: auto);
+			right: 15px;
+		}
+	}
+}
+
+.search_result {
+	background-color: #ffffff;
+	height: 50px;
+	@include display_varible;
+	border-bottom: 1px solid #eeeeee;
+
+	span {
+		display: inline-block;
+		margin-left: 5px;
+		color: #FE354D;
+	}
+}
+
+.intergrate_wrap {
+	.category_tit {
+		margin-top: 25px;
+		height: 40px;
+		background-color: #ffffff;
+		@include display_varible($justify-content: flex-start);
+		font-size: 14px;
+		font-weight: 600;
+		border-bottom: 1px solid #eeeeee;
+	
+		span {
+			margin-left: 3px;
+			font-size: 12px;
+			font-weight: 400;
+			color: $color_04;
+		}
+	}
+
+	.list_wrap {
+		&.channel,
+		&.storelist {
+			> div:first-child {
+				border-top: 0;
+			}
+		}
+		&.story {
+			padding: 15px 0;
+			background-color: #ffffff;
+		}
+	}
+
+	.search_empty {
+		margin-top: 10px;
+		@include display_varible;
+		flex-direction: column;
+		background-color: #ffffff;
+		height: 155px;
+		border-top: 1px solid #eeeeee;
+		border-bottom: 1px solid #eeeeee;
+
+		p {
+			margin-top: 10px;
+			font-size: 14px;
+			text-align: center;
+
+			span {
+				color: #FE354D;
+			}
+		}
+	}
+	
 }
 
 
