--- a/css/style.css
+++ b/css/style.css
@@ -1988,6 +1988,9 @@ p.original_price {
 .tab_btn_wrap ul li > span {
   font-size: 10px;
 }
+.tab_btn_wrap.orderlist ul li {
+  width: 25%;
+}
 
 /* bottom_button */
 .bottom_button {
@@ -4157,6 +4160,61 @@ p.original_price {
 }
 .refund_detail_wrap .refund_info .sum > div strong.sum_price {
   color: #EB0D2F;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 0 25px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.modal .modal_wrap {
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 15px;
+  overflow: hidden;
+}
+.modal .modal_wrap .content {
+  padding: 35px 14px 0 14px;
+  box-sizing: border-box;
+  text-align: center;
+}
+.modal .modal_wrap .content h2 {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 18px;
+}
+.modal .modal_wrap .content p {
+  margin-bottom: 35px;
+}
+.modal .modal_wrap .modal_btn {
+  font-size: 0;
+}
+.modal .modal_wrap .modal_btn.alert button {
+  width: 100%;
+}
+.modal .modal_wrap .modal_btn button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 50px;
+  font-size: 14px;
+}
+.modal .modal_wrap .modal_btn button.cancel {
+  background-color: #eeeeee;
+}
+.modal .modal_wrap .modal_btn button.confirm {
+  color: #ffffff;
+  background-color: #FE354D;
 }
 
 /*# sourceMappingURL=style.css.map */
