--- a/css/style.scss
+++ b/css/style.scss
@@ -2265,6 +2265,14 @@ p.original_price {
 			}
 		}
 	}
+
+	&.orderlist {
+		ul {
+			li {
+				width: 25%;
+			}
+		}
+	}
 }
 
 
@@ -4619,7 +4627,65 @@ p.original_price {
 
 
 
+.modal {
+	position: fixed;
+	top: 0; left: 0;
+	width: 100%; height: 100%;
+	@include display_varible;
+	background-color: rgba(0, 0, 0, 0.3);
+	padding: 0 25px;
+	box-sizing: border-box;
+	overflow: hidden;
+	.modal_wrap {
+		width: 100%;
+		background-color: #ffffff;
+		border-radius: 15px;
+		overflow: hidden;
 
+		.content {
+			padding: 35px 14px 0 14px;
+			box-sizing: border-box;
+			text-align: center;
+
+			h2 {
+				font-size: 18px;
+				font-weight: 700;
+				margin-bottom: 18px;
+			}
+			p {
+				margin-bottom: 35px;
+			}
+		}
+
+		.modal_btn {
+			font-size: 0;
+
+			&.alert {
+				button {
+					width: 100%;
+				}
+			}
+
+			button {
+				@include display_varible($display:inline-flex);
+				width: 50%;
+				height: 50px;
+				font-size: 14px;
+
+				&.cancel {
+					background-color: #eeeeee;
+				}
+
+				&.confirm {
+					color: #ffffff;
+					background-color: #FE354D;
+				}
+
+			}
+		}
+	}
+
+}
 
 
 
