--- a/css/style.css
+++ b/css/style.css
@@ -600,13 +600,40 @@ span.date {
   font-size: 12px;
   color: #666666;
 }
-.list_align_wrap span {
+.list_align_wrap .align_dropdown_wrap {
   position: absolute;
   top: 50%;
   right: 14px;
   transform: translateY(-50%);
+  z-index: 4;
+}
+
+.align_dropdown_wrap span {
   font-size: 12px;
   color: #666666;
+}
+.align_dropdown_wrap .align_dropdwon {
+  width: 106px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 20px;
+  right: 0;
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.25);
+}
+.align_dropdown_wrap .align_dropdwon ul li {
+  height: 34px;
+  line-height: 34px;
+  font-size: 12px;
+  box-sizing: border-box;
+  padding-left: 15px;
+  border-bottom: 1px solid #eeeeee;
+}
+.align_dropdown_wrap .align_dropdwon ul li.on {
+  color: #FE354D;
+}
+.align_dropdown_wrap .align_dropdwon ul li:last-child {
+  border-bottom: none;
 }
 
 .storelist_box {
