--- a/css/style.scss
+++ b/css/style.scss
@@ -771,15 +771,51 @@ span.date {
 		color: $color_05;
 	}
 
-	span {
+	.align_dropdown_wrap {
 		position: absolute;
 		top: 50%; right: 14px;
 		transform: translateY(-50%);
-		font-size: 12px;
-		color: $color_05;
+		z-index: 4;
 	}
 }
 
+
+.align_dropdown_wrap {
+
+	span {
+		font-size: 12px;
+		color: $color_05;
+	}
+
+
+	.align_dropdwon {
+		width: 106px;
+		background-color: #ffffff;
+		position: absolute;
+		top: 20px; right: 0;
+		border: 1px solid #eeeeee;
+		box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.25);
+
+		ul {
+			li {
+				height: 34px;
+				line-height: 34px;
+				font-size: 12px;
+				box-sizing: border-box;
+				padding-left: 15px;
+				border-bottom: 1px solid #eeeeee;
+
+				&.on {
+					color: #FE354D;
+				}
+
+				&:last-child {
+					border-bottom: none;
+				}
+			}
+		}
+	}
+}
 
 
 
